Adding some changes to the contact info and experience

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>Hello! I am a Software Engineer with focus on Web Development with 4+ years of experience in all layers of quality engineering with strong design, automation as well as functional knowledge. Skilled in Java - Spring Boot, Liferay, Swing; Python - Django; Typescript - Angular, Javascript - Vue.js.</p>
+          <p>Hello! I am a Software Engineer with focus on Web Development with 6+ years of experience in all layers of quality engineering with strong design, automation as well as functional knowledge. Skilled in Java - Spring Boot, Liferay, Swing; Python - Django; Typescript - Angular; Javascript - Vue.js, React, Next.js.</p>
           <p>
             Have experience in Domain Areas like Health-Care, FinTech, Media Management, Project Management, VR, etc.
           </p>
@@ -240,7 +240,7 @@
 
         <div class="section-title">
           <h2>Resume</h2>
-          <p>Software engineer with 4+ years of experience in providing software solutions to
+          <p>Software engineer with 6+ years of experience in providing software solutions to
             support processes from different domains and fast software delivery, looking for the challenging and rewarding
             position in reputed organization.</p>
         </div>
@@ -250,7 +250,7 @@
             <h3 class="resume-title">Summary</h3>
             <div class="resume-item pb-0">
               <h4>Nikola Torma</h4>
-              <p><em>Innovative and deadline-driven web application developer with 4+ years of experience designing and developing user-centered softwares from initial concept to final, polished deliverable.</em></p>
+              <p><em>Innovative and deadline-driven web application developer with 6+ years of experience designing and developing user-centered softwares from initial concept to final, polished deliverable.</em></p>
               <ul>
                 <li>Šid, Serbia</li>
                 <li>+38162653528</li>
@@ -277,37 +277,73 @@
             <div class="resume-item">
               <h4>Senior Full-Stack Web Developer</h4>
               <h5>January 2023 - Present</h5>
-              <p><em>Eurodata - edrewe</em></p>
+              <p><em>Tax calculator</em></p>
               <ul>
-                <li>Job description: Writing design, writing code, writing tests, debugging, reviewing</li>
-                <li>Tech-stack and tools: Java, Swing, Hibernate, Maven, Spring Boot, Spring Web, Spring Data, Spring Security, Miroboard, JUnit, SonarQube, AssertJ, Mockito, Docker, GitLab, JIRA, Elastic, GlazedLists, PostgreSQL</li>
+                <li>Job description: Writing design, creating database, writing code, writing tests, debugging, reviewing, deployment</li>
+                <li>Tech-stack and tools: Typescript, React, Next.js, Tremor.so, Docker, GitHub, Asana, MongoDB, Postmark</li>
+              </ul>
+            </div>
+            <div class="resume-item">
+              <h4>Senior Full-Stack Web Developer</h4>
+              <h5>January 2023 - Present</h5>
+              <p><em>Ticketing software</em></p>
+              <ul>
+                <li>Job description: Writing design, writing code, writing tests, debugging, reviewing, handing pipelines, managing production services</li>
+                <li>Tech-stack and tools: Java, Hibernate, JPA, Maven, Spring Boot, Spring Web, Spring Data, Spring Security, JUnit, SonarQube, AssertJ, Mockito, Docker, GitLab, JIRA, Elastic, MySQL, Kafka</li>
+              </ul>
+            </div>
+            <div class="resume-item">
+              <h4>Senior Full-Stack Web Developer</h4>
+              <h5>January 2023 - Present</h5>
+              <p><em>Accounting software</em></p>
+              <ul>
+                <li>Job description: Writing design, writing code, writing tests, debugging, reviewing, managing production services</li>
+                <li>Tech-stack and tools: Java, Swing, Hibernate, Maven, Spring Boot, Spring Web, Spring Data, Spring Security, Miroboard, JUnit, SonarQube, AssertJ, Mockito, Docker, Bitbucket, JIRA, Elastic, GlazedLists, PostgreSQL</li>
               </ul>
             </div>
             <div class="resume-item">
               <h4>Medior Full-Stack Web Developer</h4>
               <h5>August 2021 - December 2023</h5>
-              <p><em>MyClin</em></p>
+              <p><em>Clinical Research Web App</em></p>
               <ul>
                 <li>Job description: Writing design, writing code, writing tests, writing documentation, debugging</li>
                 <li>Tech-stack and tools: Java, Javascript, Vue.js, KenduUI, Liferay, Hibernate, Gradle, Miroboard, Confluence, JUnit, SonarLite, Docker, GitLab, ElasticSearch, Postman, Postmark, Amazon Systems Manager, Amazon Simple Storage Service, MySQL</li>
               </ul>
             </div>
-			<div class="resume-item">
+			      <div class="resume-item">
               <h4>Medior Full-Stack Web Developer</h4>
               <h5>February 2021 - August 2021</h5>
-              <p><em>Aixa Digital Humans</em></p>
+              <p><em>Digital Human ChatBot Web App</em></p>
               <ul>
                 <li>Job description: Writing code, writing documentation, testing, debugging, deployment</li>
                 <li>Tech-stack and tools: Typescript, Javascript, Angular, node.js, DirectLine Websocket, Azure Media Player, Azure Cognitive Services, Azure Redis, Azure Blob Storage, RxJS, GitHub</li>
               </ul>
             </div>
-			<div class="resume-item">
-              <h4>Junior Full-Stack Web Developer</h4>
+			      <div class="resume-item">
+              <h4>Medior Full-Stack Web Developer</h4>
               <h5>June 2019 - January 2021</h5>
-              <p><em>Virtual Terminal RealWear</em></p>
+              <p><em>RealWear App</em></p>
               <ul>
                 <li>Job description: Creating database, writing code, writing documentation, writing tests, debugging, reviewing, deployment</li>
                 <li>Tech-stack and tools: Java, Spring Boot, JPA, C#, Unity, Typescript, Angular, Websocket, REST API, Postman, WebRTC, MQTT Broker, RWExplorer, Android Studio, MSSQL, Liquibase, SonarLint, Azure DevOps</li>
+              </ul>
+            </div>
+            <div class="resume-item">
+              <h4>Junior Full-Stack Web Developer</h4>
+              <h5>December 2018 - June 2019</h5>
+              <p><em>Socks-shop</em></p>
+              <ul>
+                <li>Job description: Creating database, writing code, writing documentation, writing tests, debugging, reviewing, deployment</li>
+                <li>Tech-stack and tools: Typescript, Angular, Websocket, REST API, Postman, Firebase</li>
+              </ul>
+            </div>
+            <div class="resume-item">
+              <h4>Junior Full-Stack Web Developer</h4>
+              <h5>September 2017 - November 2018</h5>
+              <p><em>Weather App</em></p>
+              <ul>
+                <li>Job description: Creating mobile app, setting up the database, writing code, writing documentation, writing tests, debugging, reviewing, deployment</li>
+                <li>Tech-stack and tools: Java, Android Studio, Websocket, REST API, Postman, MySQL</li>
               </ul>
             </div>
           </div>
@@ -627,8 +663,6 @@
           <h2>Contact</h2>
         </div>
 
-        <div class="row mt-1">
-
           <div class="col-lg-4">
             <div class="info">
               <div class="address">
@@ -653,7 +687,7 @@
 
           </div>
 
-          <div class="col-lg-8 mt-5 mt-lg-0">
+          <!-- <div class="col-lg-8 mt-5 mt-lg-0">
 
             <form action="forms/contact.php" method="post" role="form" class="php-email-form">
               <div class="row">
@@ -678,9 +712,7 @@
               <div class="text-center"><button type="submit" disabled>Send Message</button></div>
             </form>
 
-          </div>
-
-        </div>
+          </div> -->
 
       </div>
     </section><!-- End Contact Section -->
@@ -691,14 +723,14 @@
   <footer id="footer">
     <div class="container">
       <h3>Nikola Torma</h3>
-      <p>© Nikola Torma 2024 All rights reserved</p>
+      <p>© Nikola Torma 2025 All rights reserved</p>
       <div class="social-links">
         <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
         <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
 		<a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
       </div>
       <div class="copyright">
-        &copy; Copyright <strong><span>Nikola Torma 2024.</span></strong> All Rights Reserved
+        &copy; Copyright <strong><span>Nikola Torma 2025.</span></strong> All Rights Reserved
       </div>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
